--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "vue-markdown": "^2.2.4",
     "vue-router": "~4.0.4",
     "vue-schart": "^2.0.0",
-    "vuex": "~4.0.0"
+    "vuex": "~4.0.0",
+    "web3": "^1.7.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.11",
